# makita

./: .gitignore  Cargo.toml  Cross.toml  build.rs  commands.json5  openapi.yml  readme.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: deploy.yml  validate_api.yml
migrations/: 0_initial_schema.sql  1_previews.sql  2_permissions.sql  3_archives.sql  4_users.sql  5_cron.sql  5_web_permissions.sql  6_timeout.sql  7_admin.sql  8_remove_api.sql
src/: cli.rs  config.rs  custom_ids.rs  decode.rs  error.rs  handler.rs  logging.rs  macros.rs  main.rs  prelude.rs  router.rs  sql.rs  tasks.rs  utils.rs
src/api/: admin.rs  auth.rs  mod.rs  previews.rs  utils.rs
src/modules/: auth.rs  mod.rs  permissions.rs  previews.rs  updates.rs  utils.rs
