# Copyright 2021 Squili
# This program is distributed under the terms of the GNU Affero General Public License
# You should have received a copy of the license along with this program
# If not, see <https://www.gnu.org/licenses/#AGPL>

[package]
name = "makita"
description = "The cordless hose nozzle of Discord bots"
repository = "https://github.com/squili/makita"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"] }
anyhow = "1"
# this is actually a fork of serenity because... well it's a long story
serenity = { git = "https://github.com/squili/serenity-makita.git", rev = "5f2b7e9d4f18710c22a974550c6b701f85c092dd", default-features = false, features = ["client", "http", "model", "unstable_discord_api", "cache", "rustls_backend", "gateway"] }
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["console_appender", "rolling_file_appender",
    "pattern_encoder", "compound_policy", "size_trigger", "fixed_window_roller", "background_rotation"] }
serde = { version = "1", features = ["derive"] }
ron = "0.6"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = "0.4"
regex = "1"
futures = "0.3"
clap = "3.0.0-beta.4"
dialoguer = "0.8"
ring = { version = "0.16", features = ["std"] }
reqwest = "0.11.7"
octocrab = "0.12"
semver = "1"
async-ctrlc = "1"
serde_json = "1"
axum = { version = "0.4", features = ["http2"] }
tower = "0.4"
tower-http = { version = "0.1.2", features = ["cors"] }
jsonwebtokens = "1"
rcgen = { version = "0.8", features = ["pem"] }
base64 = "0.13"

[build-dependencies]
# needed for converting commands.json5
serde_json = "1.0"
json5 = "0.3"
anyhow = "1"
