# Copyright 2021 Squili
# This program is distributed under the terms of the GNU Affero General Public License
# You should have received a copy of the license along with this program
# If not, see <https://www.gnu.org/licenses/#AGPL>

[package]
name = "makita"
description = "The cordless hose nozzle of Discord bots"
repository = "https://github.com/squili/makita"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
anyhow = "1.0.56"
serenity = { version = "0.11.5", default-features = false, features = ["client", "http", "model", "unstable_discord_api", "cache", "rustls_backend", "gateway"] }
log = "0.4.14"
log4rs = { version = "1.0.0", default-features = false, features = ["console_appender", "rolling_file_appender",
    "pattern_encoder", "compound_policy", "size_trigger", "fixed_window_roller", "background_rotation"] }
serde = { version = "1.0.136", features = ["derive"] }
ron = "0.7.0"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = "0.4.19"
regex = "1.5.5"
futures = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }
dialoguer = "0.10.0"
reqwest = { version = "0.11.10", default-features = false }
octocrab = { version = "0.17.0", default-features = false }
semver = "1.0.6"
async-ctrlc = "1.2.0"
serde_json = "1.0.79"
axum = "0.5.15"
base64 = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"

[build-dependencies]
# needed for converting commands.json5
serde_json = "1.0.79"
json5 = "0.4.1"
anyhow = "1.0.56"
